syntax = "proto3";

option java_multiple_files = false;
option java_package = "com.wz";
option java_outer_classname = "TestProto";

message TestRequest{
  string name = 1;
}

message TestResponse{
  string result = 1;
}

service TestService{
  rpc testWz(TestRequest) returns(TestResponse){}
}

